# emec-api

./: .flake8  .gitignore  LICENSE  Makefile  README.md  example.py  pyproject.toml  requirements.txt  setup.py
emec/: __init__.py  __main__.py  __version__.py  application.py  emec.py  utils.py
emec/api/: client.py  utils.py
emec/commands/: about.py  scraper.py
emec_api/: __main__.py  __version__.py  application.py
emec_api/commands/: scraper.py
examples/: parse_institution.py  parse_list_institutions.py
examples/data/: list_institutions.csv  parsed_institutions.csv
