[tool.poetry]
name = "emec-api"
version = "0.1.9"
description = "API Python para obter informações de instituições de ensino superior."
authors = ["Adilson Pavan <adilson.pavan@gmail.com>"]
repository = "https://github.com/pavanad/emec-api"
keywords = ["universidades", "cursos", "e-mec", "api", "brasil"]
license = "MIT License"
readme = "README.md"

[tool.poetry.scripts]
emec = "emec_api.__main__:main"

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.10.0"
cleo = "^0.8.1"
pyfiglet = "^0.8.post1"
aiohttp = "^3.8.1"
pandas = "^1.4.2"
tqdm = "^4.66.1"


[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
bandit = "^1.7.3"

[tool.poetry.group.dev.dependencies]
twine = "^5.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"